# AutoRL-Landscape

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  best_agent  compare-zoo.sh  conda-output.txt  env-requirements.txt  env-setup.yaml  exported_env.txt  ma-kwie.yaml  ma-kwie_requirements.txt  main.py  make_plots.sh  pyproject.toml  run-mypy.sh  setup.py  setup_old.py
.github/workflows/: docs.yml  pytest.yml
autorl_landscape/: __init__.py  distributions.py  main.py  train.py  visualize.py
autorl_landscape/agents/: agent.py  sac.py  simple.py
autorl_landscape/analyze/: concavity.py  crashes.py  distributions.py  kde_bandwidth.py  modalities.py  peaks.py  rubber_band.py
autorl_landscape/custom_agents/: custom_dqn.py  dqn.py  off_policy_algorithm.py  on_policy_algorithm.py  ppo.py  sac.py
autorl_landscape/gp/: heteroskedastic_gp.py
autorl_landscape/ls_models/: heteroskedastic_gp.py  linear.py  ls_model.py  mock.py  rbf.py  triple_gp.py
autorl_landscape/run/: callback.py  compare.py  eval_stage.py  phase.py  rl_context.py  train.py
autorl_landscape/types/: dim_info.py  visualization.py
autorl_landscape/util/: callback.py  comparator.py  compare.py  data.py  debug.py  download.py  grid_space.py  interpolate.py  ls_sampler.py  networks.py  schedule.py  simplex.py
conf/: config.yaml
conf/agent/: sac.yaml  simple.yaml
conf/combo/: dqn_cartpole.yaml  ppo_walker.yaml  sac_hopper.yaml  testing.yaml
conf/combo/agent/: dqn.yaml  sac.yaml
conf/combo/env/: cartpole.yaml  hopper.yaml
conf/env/: cartpole.yaml  hopper.yaml
conf/ls/: debug.yaml  dqn.yaml  full.yaml  grid_3.yaml  ppo.yaml  reduced.yaml  sac.yaml  sac_crash.yaml  sobol.yaml  sobol_2.yaml  sobol_3.yaml  sobol_nn_4.yaml  sobol_reduced.yaml  zoo.yaml
conf/phases/: 100k.yaml  150k.yaml  20k.yaml  40k.yaml  500k.yaml  500k_4.yaml  quick.yaml  quick_4.yaml
conf/slurm/: debug.yaml  local.yaml  tnt.yaml  tntw.yaml
data/kwie98/: quick_slurm_sobol_2_v2_2023-01-13_16-36-15.csv  quick_slurm_sobol_3_2023-01-13_17-27-49.csv  slurm_grid_3_2023-01-11_15-49-00.csv  test_exploration_2022-11-15_16-35-27.csv  test_exploration_2022-11-15_18-55-16.csv  test_exploration_2022-11-15_19-10-13.csv  test_exploration_2022-11-15_19-17-56.csv  test_exploration_2022-11-15_19-34-17.csv
data/kwie98/first_slurm_2022-11-15_19-35-27_gp_phase_0/: saved_model.pb
data/kwie98/first_slurm_2022-11-15_19-35-27_gp_phase_0/variables/: variables.data-00000-of-00001  variables.index
data/kwie98/first_slurm_2022-11-15_19-35-27_gp_phase_1/: saved_model.pb
data/kwie98/first_slurm_2022-11-15_19-35-27_gp_phase_1/variables/: variables.data-00000-of-00001  variables.index
data/kwie98/first_slurm_2022-11-15_19-35-27_gp_phase_2/: saved_model.pb
data/kwie98/first_slurm_2022-11-15_19-35-27_gp_phase_2/variables/: variables.data-00000-of-00001  variables.index
data/kwie98/first_slurm_2022-11-15_19-35-27_hsgp_phase_0/: saved_model.pb
data/kwie98/first_slurm_2022-11-15_19-35-27_hsgp_phase_0/variables/: variables.data-00000-of-00001  variables.index
data/kwie98/first_slurm_2022-11-15_19-35-27_hsgp_phase_1/: saved_model.pb
data/kwie98/first_slurm_2022-11-15_19-35-27_hsgp_phase_1/variables/: variables.data-00000-of-00001  variables.index
data/kwie98/first_slurm_2022-11-15_19-35-27_hsgp_phase_2/: saved_model.pb
data/kwie98/first_slurm_2022-11-15_19-35-27_hsgp_phase_2/variables/: variables.data-00000-of-00001  variables.index
data/kwie98_paper/: dqn_ls3.csv  test_crash_4.csv  test_crash_5.csv  test_crash_6.csv  test_nocrash.csv
docs/: api.rst  conf.py
eval/: eval_model_fit.ipynb
phase_results/DQN/CartPole-v1/13-09-2022_19-43-10/phase_0/: best_agent
tests/: test_compare.py  test_ls_sampler.py  test_myfile.py  test_sb3.py  test_schedule.py  test_transformations.py  test_wandb.py
tests/test_conf/: categorical.yaml  configspace.yaml  only_sobol.yaml  sobol.yaml  sobol_viz.yaml
typings/gym/: __init__.pyi
typings/pandas/: __init__.pyi
typings/scipy/: stats.pyi
typings/stable_baselines3/common/: monitor.pyi
